# Hello-cmake

./: .gitignore.txt  CMakeLists.txt  CTestConfig.cmake  main.cpp
